[package]
name = "client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
protocol = { path = "../protocol" }
hyper = "1.5.0"
