[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
config = "0.14.0"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.15.0"
hyper-util = { version = "0.1.8", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
protocol = { path = "../protocol" }

[dev-dependencies]
tokio-tungstenite = "0.24.0"


[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["cookies", "json", "rustls-tls"]
